force-app/main/default/objects/RFI__c/RFI__c.object-meta.xml
<CustomObject>
    <label>RFI</label>
    <nameField>
        <displayFormat>RFI-{0000000000}</displayFormat>
        <label>RFI Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>