force-app/main/default/objects/RFI__c/fields/Answer_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Answer_Provided_By__c</fullName>
    <label>Answer Provided By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>