force-app/main/default/objects/RFI__c/fields/Answer_to_RFI__c.field-meta.xml
<CustomField>
    <fullName>Answer_to_RFI__c</fullName>
    <label>Answer to RFI</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>