force-app/main/default/objects/RFI__c/fields/Date_Time_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Contacted__c</fullName>
    <label>Date/Time Contacted</label>
    <type>DateTime</type>
</CustomField>