force-app/main/default/objects/RFI__c/fields/Method_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Contact__c</fullName>
    <inlineHelpText>for example: email, call etc</inlineHelpText>
    <label>Method of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>