force-app/main/default/objects/RFI__c/fields/Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Line Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>RFIs</relationshipLabel>
    <relationshipName>RFIs</relationshipName>
    <type>Lookup</type>
</CustomField>