force-app/main/default/objects/RFI__c/fields/RFI_Details__c.field-meta.xml
<CustomField>
    <fullName>RFI_Details__c</fullName>
    <label>RFI Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>